refactor(email): simplify JpaTenantContextAdapter row cast and fix test mock setup
Remove broken defensive fallback branch in JpaTenantContextAdapter (6-column JPQL
projection always returns Object[] rows; the instanceof branch was dead code whose
else-branch produced wrong results). Update unit tests to use Collections.singletonList
so the mock correctly simulates JPA multi-column projection behavior. Extend
allTemplates_haveNoBareTextNodeInHeadOutsideTitle to cover missing-template-fallback.